--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ scikit-learn==1.3.2
 scipy==1.11.3
 seaborn==0.13.0
 shapely==2.0.2
+shap==0.44.0
 six==1.16.0
 stack-data==0.6.3
 threadpoolctl==3.2.0
